* 알람 추가할 때 미션 설정할 수 있도록 구현.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".CameraMissionActivity" />
         <activity
             android:name=".AlarmActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
